--- a/scss/utilities/_footer.scss
+++ b/scss/utilities/_footer.scss
@@ -1,23 +1,34 @@
 @use '../abstracts/colors' as *;
 @use '../abstracts/mixins' as *;
 
+.footer {
+    background:
+        linear-gradient(to left,  var(--col-secondary), var(--col-primary))
+        left top
+        no-repeat;
+    background-size: 100% 1px;
+}
+
 .footer__container {
     display: flex;
     padding: 1rem 2rem;
     justify-content: center;
     align-items: center;
-    // max-width: 82rem;
 }
 
 .made-by {
     display: none;
 }
 
-.social-icons > * {
-    padding-inline: 1rem;
-    color: var(--col-secondary);
-    font-size: 1.5rem;
-    cursor: pointer;
+.social-icons {
+    margin-right: 4rem;
+
+    a {
+        padding-inline: 1rem;
+        color: var(--col-secondary);
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
 }
 
 @include for-tablet-portrait-up {
