--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -13,7 +13,7 @@
 
     // --col-error: hsl(0, 97%, 38%);
     --col-error: hsl(0, 100%, 55%);
-    // --col-success: hsl(155, 95%, 37%);
+    --col-success: hsl(155, 95%, 37%);
     // --col-warning: hsl(47, 93%, 52%);
     // --col-info: hsl(204, 88%, 52%);
 }
