Hidden seccess text for final test

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -350,6 +350,7 @@
 .paper-plane { margin-left: 0.5em; }
 
 .success-text {
+    display: none;
     position: absolute;
     top: 0;
     left: 50%;
