--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -104,6 +104,8 @@
             border: initial;
             clip-path: initial;
             background-color: initial;
+
+            .iconify { display: none; }
         }
 
         .menu {
