--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @use 'base' as *;
 @use 'abstracts' as *;
-@use 'utilities' as *;
+@use 'utilities/container' as *;
+@use 'layout' as *;
 @use 'components' as *;
 
 //* - - - - - - - - - - - - - - - - - HERO - - - - - - - - - - - - - - - - -
@@ -99,7 +100,7 @@
 
     &::after {
         position: absolute;
-        z-index: 2;
+        z-index: 10;
         content: attr(data-tooltip);
         top: 100%;
         left: 0;
@@ -107,10 +108,27 @@
         text-align: center;
         font-size: var(--fs-small);
         background-color: var(--col-dark);
+        color: var(--col-lightest);
         border-radius: $br-s;
         opacity: 0;
         transform: translateY(5px);
         transition: opacity 0.3s, transform 0.5s ease-out;
+    }
+
+    &[data-tooltip="Webflow"] { color: hsl(233, 96%, 63%); }
+    &[data-tooltip="jQuery"] { color: hsl(205, 83%, 37%); }
+    &[data-tooltip="Responsive"] { color: var(--col-lightest); }
+    &[data-tooltip="Github"] { color: black; }
+
+    &[data-tooltip="User Experience"] {
+        text-decoration: underline;
+        cursor: help;
+
+        &::after {
+            top: -150%;
+            left: -100%;
+            right: -100%;
+        }
     }
 
     &:hover {
@@ -229,6 +247,9 @@
 
 .card__text {
     margin-block: 1.5rem;
+
+    p {margin-bottom: 1.5rem;}
+
 }
 
 .card__links {
@@ -268,12 +289,6 @@
         margin-inline: auto;
     }
 }
-
-//* - - - - - - - - - - - - - - - - - CODEPEN - - - - - - - - - - - - - - - - -
-
-// .fa-codepen {
-//     margin-right: 0.5rem;
-// }
 
 //* - - - - - - - - - - - - - - - - - CONTACTS - - - - - - - - - - - - - - - - -
 
