--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,6 +12,7 @@
     font-size: 0.875rem;
     line-height: var(--lh-body);
     cursor: pointer;
+    transition: background-color 200ms;
 
     &-primary {
         @extend .btn;
@@ -33,7 +34,7 @@
         border: 2px solid var(--col-primary);
     
         &:hover {
-            background-color: hsla(0, 0%, 100%, 0.2);
+            background-color: var(--col-dark);
         }
     }
     
