--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -110,6 +110,8 @@
             background-color: initial;
 
             .iconify { display: none; }
+
+            li { border-bottom: none; }
         }
 
         .menu {
