Polish mail img

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -239,6 +239,7 @@
 .card__title {
     font-size: var(--fs-h3);
     line-height: var(--lh-h3);
+    color: var(--col-secondary);
 }
 
 .card__text {
