Changed some font size

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,6 +55,8 @@
         position: relative;
         margin-top: 2rem;
         padding-top: 2rem;
+        font-size: var(--fs-h3);
+        line-height: var(--lh-h3);
 
         &::before {
             content: '';
