--- a/css/main.css
+++ b/css/main.css
@@ -720,6 +720,8 @@ em {
   position: relative;
   margin-top: 2rem;
   padding-top: 2rem;
+  font-size: var(--fs-h3);
+  line-height: var(--lh-h3);
 }
 .services__title--learning::before {
   content: "";
