--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 @use '../abstracts/mixins' as *;
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 
 $ff-primary: 'Nunito', sans-serif;
 
